// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
<div>
  <div
    class="StyledBaseText-dVBfTO eyVWAj"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text as paragraph element 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO cTrYtU"
    data-blade-component="base-text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
<div>
  <div
    class="StyledBaseText-dVBfTO cTrYtU"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text with default properties 1`] = `
<div>
  <div
    class="StyledBaseText-dVBfTO rQNHl"
    data-blade-component="base-text"
  >
    Displaying some text
  </div>
</div>
`;
